Fix dropdowns wraping on medium screen size.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,7 +140,7 @@
   font-size: 16px !important;
   line-height: 16px !important;
   font-weight: 400 !important;
-  width: 160px !important;
+  width: inherit!important;
   overflow:hidden !important;
   white-space:nowrap !important;
   text-overflow: ellipsis !important;
@@ -156,7 +156,7 @@
   font-size: 13px !important;
   line-height: 13px !important;
   white-space: nowrap !important;
-  width: 160px !important;
+  width: inherit!important;
   font-weight: 400 !important;
   text-overflow: ellipsis !important;
 }
@@ -202,7 +202,7 @@
   .product-list
   {
     margin: 20px;
-    min-width: 160px !important;
+    //min-width: 160px !important;
   }
 
   .home-description {
@@ -273,18 +273,14 @@
 
   .product-list
   {
-    width: 800px;
+    //width: 800px;
     margin: 20px auto 20px auto;
     padding: 0 20px 0 20px;
   }
 }
 
 @media #{$medium-and-down} {
-  .button-collapse
-  {
-    float: none !important;
-    //display: none;
-  }
+
 }
 
 @media #{$large-and-up} {
@@ -316,7 +312,7 @@
 
   .product-list
   {
-    width: 1400px;
+    //width: 1400px;
     margin: 50px auto 50px auto;
     padding: 0 50px 0 50px;
   }
